--- a/src/viser/client/package.json
+++ b/src/viser/client/package.json
@@ -13,6 +13,7 @@
     "@msgpack/msgpack": "^3.0.0-beta2",
     "@react-three/drei": "^10.7.3",
     "@react-three/fiber": "^9.3.0",
+    "@react-three/xr": "^5.7.1",
     "@tabler/icons-react": "^3.1.0",
     "@three.ez/instanced-mesh": "^0.3.7",
     "@types/node": "^20.11.30",
